deploy/apps/east-ga-atl-f01/default/dev/factory/upload.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uploadmodule
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uploadmodule
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: uploadmodule
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: uploadmodule
        image: intelligentedge/uploadmodule:0.27.0-amd64
        imagePullPolicy: Always
        ports:
        - containerPort: 7000
        volumeMounts:
        - name: upload
          mountPath: /app/upload
      volumes:
      - name: upload
        persistentVolumeClaim:
          claimName: pvc-upload

---
apiVersion: v1
kind: Service
metadata:
  name: uploadmodule
  namespace: default
spec:
  ports:
  - port: 7000
  selector:
    app: uploadmodule
