deploy/apps/east-ga-atl-f01/default/dev/factory/ingress.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: web-vs
  namespace: default
spec:
  hosts:
    - "east-ga-atl-f01.cseretail.com"
  gateways:
    - istio-system/istio-gateway
  http:
    - route:
      - destination:
          host: webmodule
          port:
            number: 8000
